Update tox.ini && conf.py file
Performed-by: gitea/infra/otc-metadata/tools/generate_doc_confpy.py

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
 
 [testenv:docs-pdf]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   mkdir
 commands =
   mkdir -p doc/build/pdf
@@ -42,7 +42,7 @@ commands =
 # HTML version
 [testenv:api-ref]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   cp
   mkdir
 commands =
@@ -53,7 +53,7 @@ commands =
 # Json version (for search)
 [testenv:json-api-ref]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   cp
   mkdir
   find
@@ -67,7 +67,7 @@ commands =
 # PDF version
 [testenv:api-ref-pdf-docs]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   rm
   mkdir
   make
@@ -86,7 +86,7 @@ commands =
 # HTML version
 [testenv:umn]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   cp
   mkdir
 commands =
@@ -97,7 +97,7 @@ commands =
 # Json version (for search)
 [testenv:json-umn]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   cp
   mkdir
   find
@@ -111,7 +111,7 @@ commands =
 # PDF version
 [testenv:umn-pdf-docs]
 deps = -r{toxinidir}/doc/requirements.txt
-whitelist_externals =
+allowlist_externals =
   rm
   mkdir
   make
