Update tox.ini && conf.py file
Performed-by: gitea/infra/otc-metadata/tools/generate_doc_confpy.py

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,10 @@ commands = {posargs}
 
 [testenv:docs]
 deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  mkdir
+  cp
+  find
 commands =
   {[testenv:api-ref]commands}
   {[testenv:json-api-ref]commands}
@@ -32,7 +36,11 @@ commands =
 [testenv:docs-pdf]
 deps = -r{toxinidir}/doc/requirements.txt
 allowlist_externals =
+  rm
   mkdir
+  make
+  bash
+  cp
 commands =
   mkdir -p doc/build/pdf
   {[testenv:api-ref-pdf-docs]commands}
